--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -173,7 +173,7 @@
         app:layout_constraintTop_toBottomOf="@+id/overview"/>
 
     <ProgressBar
-        android:id="@+id/playbackProgressBar"
+        android:id="@+id/playback_progress_bar"
         style="?android:attr/progressBarStyle"
         android:layout_width="@dimen/actionbar_progress_button_size"
         android:layout_height="@dimen/actionbar_progress_button_size"
