--- a/app/src/main/res/layout/dialog_geostory_edit.xml
+++ b/app/src/main/res/layout/dialog_geostory_edit.xml
@@ -3,20 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="24dp"
     android:orientation="vertical">
 
     <CheckBox
         android:id="@+id/checkbox_show_avg_steps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:text="Show caregiver's average steps"
+        android:textSize="16sp"
         android:checked="true"/>
 
     <CheckBox
         android:id="@+id/checkbox_show_neighborhood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:text="Show neighborhood"
+        android:textSize="16sp"
         android:checked="true" />
 
     <EditText
@@ -26,6 +33,7 @@
         android:ems="10"
         android:minLines="6"
         android:maxLines="10"
+        android:textSize="16sp"
         android:gravity="start|top"
         android:hint="Bio"
         android:inputType="textMultiLine" />
