--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -15,6 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Geostory Start -->
+        <include
+            layout="@layout/layout_geostory_start" />
+
         <!-- Story Recording Screen -->
         <LinearLayout
             android:id="@+id/recording_screen"
@@ -53,19 +57,6 @@
                         android:text="This is for the adult. Can you tell a story from the prompt below?" />
 
                     <TextView
-                        android:id="@+id/reflectionDate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/story_art_big_margin"
-                        android:layout_marginRight="@dimen/story_art_big_margin"
-                        android:layout_marginTop="@dimen/story_art_big_margin"
-                        android:layout_weight="1"
-                        android:visibility="gone"
-                        android:text="@string/reflection_date_info"
-                        android:fontFamily="@font/storywell_handwriting"
-                        android:textColor="@color/colorSecondaryDark" />
-
-                    <TextView
                         android:id="@+id/reflectionText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -75,7 +66,7 @@
                         android:layout_marginTop="@dimen/story_text_submargin"
                         android:layout_weight="1"
                         android:fontFamily="@font/pangolin_regular"
-                        android:textSize="32sp"
+                        android:textSize="28sp"
                         android:textStyle="normal"
                         android:textColor="@color/storyReflectionText"
                         android:text="Can you tell a story when your had a fun time being active together with your family?" />
@@ -274,6 +265,23 @@
                         android:text="Share Story"
                         android:textSize="16sp"
                         android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Button
+                        android:id="@+id/button_next"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:background="@drawable/rounded_primary_button"
+                        android:drawableEnd="@drawable/ic_round_arrow_forward_ios_24px"
+                        android:fontFamily="@font/storywell_handwriting"
+                        android:text="@string/geostory_sharing_button_next"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
