--- a/app/src/main/res/layout/fragment_reflection_start.xml
+++ b/app/src/main/res/layout/fragment_reflection_start.xml
@@ -17,15 +17,20 @@
         android:layout_above="@+id/buttonReflectionStart"
         android:layout_centerHorizontal="true"
         android:text="@string/reflection_start_title"
+        android:textColor="@color/colorPrimaryText"
+        android:textStyle="bold"
+        android:fontFamily="@font/storywell_handwriting"
+        android:textSize="28sp"
+        android:textAlignment="center"
         android:theme="@style/AppTheme.ReflectionStart.text" />
 
     <ImageView
         android:id="@+id/buttonReflectionStart"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
+        android:layout_width="360dp"
+        android:layout_height="340dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        app:srcCompat="@mipmap/reflection_icon" />
+        app:srcCompat="@mipmap/art_envelope_reflection" />
 
     <TextView
         android:id="@+id/refl_start_subtext"
@@ -34,6 +39,11 @@
         android:layout_below="@+id/buttonReflectionStart"
         android:layout_centerHorizontal="true"
         android:text="@string/reflection_start_subtitle"
+        android:textColor="@color/colorPrimaryText"
+        android:textStyle="normal"
+        android:fontFamily="@font/storywell_handwriting"
+        android:textSize="24sp"
+        android:textAlignment="center"
         android:theme="@style/AppTheme.ReflectionStart.subtext" />
 
 </RelativeLayout>
