--- a/app/src/main/res/layout/fragment_storymap.xml
+++ b/app/src/main/res/layout/fragment_storymap.xml
@@ -4,18 +4,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="0dp"
+    android:outlineProvider="bounds"
     tools:context=".StoryMapFragment">
 
     <!--<include layout="@layout/layout_storymap_map" />-->
     <fragment
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/map"
+        android:elevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <include
         android:id="@+id/storymap_viewer_sheet"
-        android:elevation="10dp"
         layout="@layout/layout_storymap_viewer" />
 
     <LinearLayout
