--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -25,7 +25,7 @@
             android:layout_marginEnd="0dp"
             android:fontFamily="@font/storywell_handwriting"
             android:gravity="start"
-            android:text="Family Story - "
+            android:text="Community Story - "
             android:textColor="@color/greyPrimaryDark"
             android:textStyle="bold"
             android:textSize="12sp"
