--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -186,6 +186,7 @@
             android:orientation="vertical"
             android:gravity="bottom">
 
+            <!--
             <Button
                 android:id="@+id/button_change_location"
                 android:layout_width="wrap_content"
@@ -199,7 +200,7 @@
                 android:background="@drawable/rounded_gray_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:visibility="gone"/>
+                android:visibility="gone"/> -->
 
             <fragment
                 android:id="@+id/map"
@@ -212,7 +213,7 @@
             <include
                 android:id="@+id/storymap_viewer_sheet"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/storymap_viewer_expanded_height"
+                android:layout_height="@dimen/storymap_viewer_collapsed_height"
                 layout="@layout/layout_storymap_viewer"
                 app:layout_constraintBottom_toTopOf="@+id/sharing_controls" />
 
